# api_yamdb

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
api_yamdb/api/: permissions.py  serializers.py  urls.py  views.py
api_yamdb/api_yamdb/: settings.py
api_yamdb/reviews/: admin.py  models.py  validators.py
api_yamdb/reviews/management/commands/: _orm_func_for_import.py  import_data.py
api_yamdb/reviews/migrations/: 0001_initial.py  0002_alter_genres_slug.py  0002_alter_title_year.py  0002_auto_20230531_1224.py  0003_auto_20230523_1914.py  0004_genres_name.py  0005_auto_20230523_1930.py  0006_auto_20230524_1355.py  0006_auto_20230524_2351.py  0007_alter_title_category.py  0008_alter_title_category.py  0009_auto_20230524_1504.py  0010_auto_20230524_1553.py  0011_alter_title_genre.py  0012_auto_20230524_1619.py  0013_auto_20230524_2138.py
api_yamdb/users/: models.py
api_yamdb/users/migrations/: 0001_initial.py  0002_auto_20230523_1300.py  0003_alter_user_username.py
